Fix misled note about JDK 16+ and explicit toolchains